--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <span class="badge">Рязань Афиша</span>
         <h1>Баста</h1>
         <div class="info-p">
-            <b>23 мая, 19:00</b><br>
+            <b>23 февраля, 19:00</b><br>
             ДС «Олимпийский»<br>
             Рязань, ул. Зубковой, 12к2
         </div>
